--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".AppelGoogle"></activity>
         <activity android:name=".AppelSqlite"></activity>
         <activity android:name="tp.synthese.rachidi.tpsandroid.Convertisseur"></activity>
+        <activity android:name="synthese.data.sqlite.rachidi.tpsandroid.views.ViewLoginActivity"></activity>
+        <activity android:name="synthese.data.sqlite.rachidi.tpsandroid.views.ViewAdminActivity"></activity>
         <activity android:name="synthese.data.sqlite.rachidi.tpsandroid.views.ViewChildActivity"></activity>
     </application>
 
